--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
 }
 dependencies {
+    def lifecycle_version = "2.3.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -49,4 +50,9 @@ dependencies {
 
     //circle imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
 }
